libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef struct UniffiVTableCallbackInterfaceAccessTokenProvider {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceAccessTokenProviderMethod0 _Nonnull getAccessToken;
} UniffiVTableCallbackInterfaceAccessTokenProvider;
typedef struct UniffiVTableCallbackInterfaceHttpClient {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceHttpClientMethod0 _Nonnull execute;
} UniffiVTableCallbackInterfaceHttpClient;
uint64_t uniffi_cyclops_sdk_fn_clone_cyclopsclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_cyclopsclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect(RustBuffer configuration, uint64_t http_client, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_browser_with_access_token(RustBuffer configuration, RustBuffer access_token, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token(RustBuffer configuration, RustBuffer access_token, uint64_t http_client, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_and_native_http_client(RustBuffer configuration, RustBuffer access_token, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_provider(RustBuffer configuration, uint64_t token_provider, uint64_t http_client, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_provider_and_native_http_client(RustBuffer configuration, uint64_t token_provider, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_native_http_client(RustBuffer configuration, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_claim(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_claim(uint64_t ptr, RustBuffer claim
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_claim(uint64_t ptr, RustBuffer claim
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_claims(uint64_t ptr, RustBuffer namespace
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_renew_claim(uint64_t ptr, RustBuffer claim, RustBuffer shutdown_time
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_wait_claim(uint64_t ptr, RustBuffer claim
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_access_token(uint64_t ptr, int8_t force_refresh
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_fleet_claims(uint64_t ptr, RustBuffer fleet_id, RustBuffer requests
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_fleet_claims(uint64_t ptr, RustBuffer namespace, RustBuffer fleet_id
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_presign_image_uploads(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_upload_image_file(uint64_t ptr, RustBuffer namespace, RustBuffer name, RustBuffer contents
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_image(uint64_t ptr, RustBuffer namespace, uint64_t manifest
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_image(uint64_t ptr, RustBuffer namespace, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_image(uint64_t ptr, RustBuffer namespace, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_images(uint64_t ptr, RustBuffer namespace
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_namespace(uint64_t ptr, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_namespace(uint64_t ptr, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_namespace(uint64_t ptr, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_namespaces(uint64_t ptr
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_pool(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_pool(uint64_t ptr, RustBuffer pool
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_pool(uint64_t ptr, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_pools(uint64_t ptr, RustBuffer namespace
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_reconcile_pool(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_update_pool(uint64_t ptr, RustBuffer pool
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_service_request(uint64_t ptr, RustBuffer sandbox, RustBuffer service, RustBuffer path, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_service_websocket_url(uint64_t ptr, RustBuffer sandbox, RustBuffer service, RustBuffer path
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_signed_service_url(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_signed_service_urls(uint64_t ptr, RustBuffer sandbox
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_revoke_signed_service_url(uint64_t ptr, RustBuffer signed_service_url
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_template(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_template(uint64_t ptr, RustBuffer template
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_template(uint64_t ptr, RustBuffer namespace, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_templates(uint64_t ptr, RustBuffer namespace
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_reconcile_template(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_update_template(uint64_t ptr, RustBuffer template
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_user_api_key(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_user_api_key(uint64_t ptr, RustBuffer id
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_user_api_keys(uint64_t ptr
);
uint64_t uniffi_cyclops_sdk_fn_clone_accesstokenprovider(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_accesstokenprovider(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_init_callback_vtable_accesstokenprovider(const UniffiVTableCallbackInterfaceAccessTokenProvider* _Nonnull vtable
);
uint64_t uniffi_cyclops_sdk_fn_method_accesstokenprovider_get_access_token(uint64_t ptr, int8_t force_refresh
);
uint64_t uniffi_cyclops_sdk_fn_clone_httpclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_httpclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_init_callback_vtable_httpclient(const UniffiVTableCallbackInterfaceHttpClient* _Nonnull vtable
);
uint64_t uniffi_cyclops_sdk_fn_method_httpclient_execute(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_clone_createclaimrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createclaimrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createclaimrequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_labels(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_pool(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_spec(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createpoolrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createpoolrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createpoolrequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_namespace(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_spec(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createsignedserviceurlrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createsignedserviceurlrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createsignedserviceurlrequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_expires_in_seconds(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_label(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_sandbox(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_service(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createtemplaterequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createtemplaterequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);