libs/fleet/sdk-bindings/ts-uniffi-browser/cpp/fleet_sdk_module.rs

#[allow(unused_imports)]
use uniffi_runtime_javascript::{self as js, uniffi as u, IntoJs, IntoRust};
use wasm_bindgen::prelude::wasm_bindgen;
extern "C" {
    fn uniffi_cyclops_sdk_fn_clone_cyclopsclient(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_cyclopsclient(handle: u64, status_: &mut u::RustCallStatus);
    fn uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect(
        configuration: u::RustBuffer,
        http_client: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_browser_with_access_token(
        configuration: u::RustBuffer,
        access_token: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token(
        configuration: u::RustBuffer,
        access_token: u::RustBuffer,
        http_client: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_and_native_http_client(
        configuration: u::RustBuffer,
        access_token: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_provider(
        configuration: u::RustBuffer,
        token_provider: u64,
        http_client: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_provider_and_native_http_client(
        configuration: u::RustBuffer,
        token_provider: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_native_http_client(
        configuration: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_create_claim(
        ptr: u64,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_claim(
        ptr: u64,
        claim: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_get_claim(ptr: u64, claim: u::RustBuffer) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_list_claims(
        ptr: u64,
        namespace: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_renew_claim(
        ptr: u64,
        claim: u::RustBuffer,
        shutdown_time: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_wait_claim(ptr: u64, claim: u::RustBuffer)
        -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_access_token(ptr: u64, force_refresh: i8) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_create_fleet_claims(
        ptr: u64,
        fleet_id: u::RustBuffer,
        requests: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_list_fleet_claims(
        ptr: u64,
        namespace: u::RustBuffer,
        fleet_id: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_presign_image_uploads(
        ptr: u64,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_upload_image_file(
        ptr: u64,
        namespace: u::RustBuffer,
        name: u::RustBuffer,
        contents: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_create_image(
        ptr: u64,
        namespace: u::RustBuffer,
        manifest: u64,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_image(
        ptr: u64,
        namespace: u::RustBuffer,
        name: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_get_image(
        ptr: u64,
        namespace: u::RustBuffer,
        name: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_list_images(
        ptr: u64,
        namespace: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_create_namespace(
        ptr: u64,
        name: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_namespace(
        ptr: u64,
        name: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_get_namespace(
        ptr: u64,
        name: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_list_namespaces(ptr: u64) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_create_pool(
        ptr: u64,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_pool(ptr: u64, pool: u::RustBuffer)
        -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_get_pool(ptr: u64, name: u::RustBuffer) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_list_pools(
        ptr: u64,
        namespace: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_reconcile_pool(
        ptr: u64,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_update_pool(ptr: u64, pool: u::RustBuffer)
        -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_service_request(
        ptr: u64,
        sandbox: u::RustBuffer,
        service: u::RustBuffer,
        path: u::RustBuffer,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_service_websocket_url(
        ptr: u64,
        sandbox: u::RustBuffer,
        service: u::RustBuffer,
        path: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_create_signed_service_url(
        ptr: u64,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_list_signed_service_urls(
        ptr: u64,
        sandbox: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_revoke_signed_service_url(
        ptr: u64,
        signed_service_url: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_create_template(
        ptr: u64,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_template(
        ptr: u64,
        template: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_get_template(
        ptr: u64,
        namespace: u::RustBuffer,
        name: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_list_templates(
        ptr: u64,
        namespace: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_reconcile_template(
        ptr: u64,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_update_template(
        ptr: u64,
        template: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_create_user_api_key(
        ptr: u64,
        request: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_user_api_key(
        ptr: u64,
        id: u::RustBuffer,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopsclient_list_user_api_keys(ptr: u64) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_accesstokenprovider(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_accesstokenprovider(handle: u64, status_: &mut u::RustCallStatus);
    fn uniffi_cyclops_sdk_fn_init_callback_vtable_accesstokenprovider(
        vtable: std::ptr::NonNull<v_table_callback_interface_access_token_provider::VTableRs>,
    );
    fn uniffi_cyclops_sdk_fn_method_accesstokenprovider_get_access_token(
        ptr: u64,
        force_refresh: i8,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_httpclient(handle: u64, status_: &mut u::RustCallStatus) -> u64;
    fn uniffi_cyclops_sdk_fn_free_httpclient(handle: u64, status_: &mut u::RustCallStatus);
    fn uniffi_cyclops_sdk_fn_init_callback_vtable_httpclient(
        vtable: std::ptr::NonNull<v_table_callback_interface_http_client::VTableRs>,
    );
    fn uniffi_cyclops_sdk_fn_method_httpclient_execute(ptr: u64, request: u::RustBuffer) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_createclaimrequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_createclaimrequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    );
    fn uniffi_cyclops_sdk_fn_constructor_createclaimrequestbuilder_new(
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_build(
        ptr: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_labels(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_name(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_pool(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_spec(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_createpoolrequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_createpoolrequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    );
    fn uniffi_cyclops_sdk_fn_constructor_createpoolrequestbuilder_new(
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_build(
        ptr: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_namespace(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_spec(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_createsignedserviceurlrequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_createsignedserviceurlrequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    );
    fn uniffi_cyclops_sdk_fn_constructor_createsignedserviceurlrequestbuilder_new(
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_build(
        ptr: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_expires_in_seconds(
        ptr: u64,
        value: u32,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_label(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_sandbox(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_service(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_createtemplaterequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_createtemplaterequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    );
